# winvoice-cli

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  SAMPLE_CONFIG.toml  TODO  clippy.toml  commands.md  expenses.pgsql  foo.vim  rustfmt.toml
crates/adapters/clinvoice_adapter/: Cargo.toml
crates/adapters/clinvoice_adapter/src/: adapter.rs  adapter_mismatch_error.rs  adapters.rs  connection.rs  connections.rs  deletable.rs  dynamic_result.rs  error.rs  feature_not_found.rs  initializable.rs  lib.rs  store.rs  updatable.rs  wrapper.rs  write_from_clause.rs  write_join_clause.rs  write_select_clause.rs  write_sql.rs  write_sql_from_clause.rs  write_sql_join_clause.rs  write_sql_select_clause.rs  write_sql_where_clause.rs  write_where_clause.rs
crates/adapters/clinvoice_adapter_bincode/: Cargo.toml
crates/adapters/clinvoice_adapter_bincode/src/: lib.rs  util.rs
crates/adapters/clinvoice_adapter_postgres/: Cargo.toml
crates/adapters/clinvoice_adapter_postgres/src/: lib.rs  postgres_adapter.rs  schema.rs  util.rs
crates/clinvoice_adapters/clinvoice_adapter_mongodb/: Cargo.toml
crates/clinvoice_bin/: Cargo.toml
crates/clinvoice_bin/src/: cli.rs  clinvoice.rs  lib.rs  main.rs
crates/clinvoice_bin/src/cli/: create.rs  retrieve.rs
crates/clinvoice_bin/src/clinvoice/: retrieve.rs
crates/clinvoice_config/: Cargo.toml
crates/clinvoice_config/src/: adapters.rs  config.rs  employees.rs  error.rs  invoices.rs  jobs.rs  lib.rs  store.rs  store_value.rs  timesheets.rs
crates/clinvoice_config/src/adapters/: display.rs
crates/clinvoice_config/src/config/: employees.rs  employers.rs  error.rs  invoices.rs  store_value.rs  timesheets.rs  updatable.rs
crates/clinvoice_config/src/employees/: default.rs
crates/clinvoice_config/src/invoices/: default.rs
crates/clinvoice_config/src/jobs/: default.rs
crates/clinvoice_config/src/timesheets/: default.rs
crates/clinvoice_data/: Cargo.toml  build.rs
crates/clinvoice_data/src/: client.rs  contact.rs  employee.rs  employee_status.rs  employer.rs  expense.rs  expense_category.rs  from_str_error.rs  id.rs  invoice.rs  invoice_date.rs  job.rs  lib.rs  location.rs  money.rs  organization.rs  person.rs  timesheet.rs
crates/clinvoice_data/src/contact/: from_view.rs
crates/clinvoice_data/src/employee/: from_view.rs  hash.rs  partial_eq.rs
crates/clinvoice_data/src/employee_status/: display.rs  from_str.rs
crates/clinvoice_data/src/expense/: display.rs
crates/clinvoice_data/src/expense_category/: display.rs
crates/clinvoice_data/src/export/: into_markdown.rs  mod.rs
crates/clinvoice_data/src/invoice/: de_ser.rs  display.rs  hash.rs  ser_de.rs
crates/clinvoice_data/src/invoice_date/: display.rs
crates/clinvoice_data/src/job/: from_view.rs  hash.rs
crates/clinvoice_data/src/location/: from_view.rs  hash.rs
crates/clinvoice_data/src/money/: display.rs
crates/clinvoice_data/src/organization/: from_view.rs  hash.rs
crates/clinvoice_data/src/person/: from_view.rs  hash.rs  partial_eq.rs
crates/clinvoice_data/src/timesheet/: from_view.rs
crates/clinvoice_data/src/views/: contact_view.rs  employee_view.rs  job_view.rs  location_view.rs  mod.rs  organization_view.rs  person_view.rs  preservable_serde.rs  restorable_serde.rs  timesheet_view.rs
crates/clinvoice_error/: Cargo.toml
crates/clinvoice_error/src/: alias_result.rs  lib.rs
crates/clinvoice_error/src/macros/: alias_result.rs  from_error.rs  mod.rs
crates/clinvoice_export/: Cargo.toml
crates/clinvoice_export/src/: format.rs  lib.rs  markdown.rs  target.rs
crates/clinvoice_export/src/markdown/: block.rs  element.rs  mod.rs  text.rs
crates/clinvoice_finance/: Cargo.toml
crates/clinvoice_finance/src/: currency.rs  error.rs  exchange_rates.rs  exchangeable.rs  lib.rs  money.rs  unsupported_currency_error.rs
crates/clinvoice_finance/src/currency/: default.rs  display.rs  from_str.rs
crates/clinvoice_finance/src/exchange_rates/: from_str.rs  index.rs  try_from_path.rs
crates/clinvoice_finance/src/money/: display.rs  exchangeable.rs
crates/clinvoice_finance/src/unsupported_currency_error/: display.rs  error.rs
crates/clinvoice_match/: Cargo.toml
crates/clinvoice_match/src/: lib.rs  match.rs  match_contact.rs  match_employee.rs  match_expense.rs  match_invoice.rs  match_job.rs  match_location.rs  match_option.rs  match_organization.rs  match_person.rs  match_row.rs  match_set.rs  match_str.rs  match_timesheet.rs
crates/clinvoice_match/src/match/: default.rs  exchangeable.rs  from.rs
crates/clinvoice_match/src/match_contact/: default.rs  match_contact_kind.rs
crates/clinvoice_match/src/match_expense/: exchangeable.rs
crates/clinvoice_match/src/match_invoice/: exchangeable.rs
crates/clinvoice_match/src/match_job/: exchangeable.rs
crates/clinvoice_match/src/match_location/: match_outer_location.rs
crates/clinvoice_match/src/match_option/: default.rs  from.rs
crates/clinvoice_match/src/match_row/: default.rs  exchangeable.rs  from.rs
crates/clinvoice_match/src/match_set/: default.rs  exchangeable.rs  from.rs
crates/clinvoice_match/src/match_str/: default.rs  from.rs
crates/clinvoice_match/src/match_timesheet/: exchangeable.rs
crates/clinvoice_schema/: Cargo.toml
crates/clinvoice_schema/src/: contact.rs  employee.rs  employee_status.rs  expense.rs  from_str_error.rs  id.rs  invoice.rs  invoice_date.rs  job.rs  lib.rs  location.rs  mod.rs  organization.rs  person.rs  restorable_serde.rs  restore_error.rs  timesheet.rs
crates/clinvoice_schema/src/contact/: contact_kind.rs  display.rs  from_view.rs  restorable_serde.rs
crates/clinvoice_schema/src/employee/: display.rs  from_view.rs  hash.rs  partial_eq.rs  restorable_serde.rs
crates/clinvoice_schema/src/employee_status/: display.rs
crates/clinvoice_schema/src/expense/: display.rs  exchangeable.rs  restorable_serde.rs
crates/clinvoice_schema/src/expense_category/: from_str.rs
crates/clinvoice_schema/src/invoice/: display.rs  exchangeable.rs
crates/clinvoice_schema/src/invoice_date/: display.rs
crates/clinvoice_schema/src/job/: default.rs  hash.rs  (+5 more)
(+634 files in other folders)
