# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice"
version = "0.2.0-rc3"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Invoice from the command line."

categories = ["command-line-utilities", "config", "date-and-time"]
edition = "2021"
keywords = ["invoice", "freelance", "cli", "command", "line", "command-line"]
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
clinvoice-adapter = {branch = "release/0.16", default-features = false, git = "https://github.com/Iron-E/clinvoice-adapter"}
clinvoice-adapter-postgres = {branch = "release/0.5", git = "https://github.com/Iron-E/clinvoice-adapter-postgres", optional = true}
clinvoice-config = {branch = "release/0.6", git = "https://github.com/Iron-E/clinvoice-config"}
clinvoice-error = {branch = "release/0.3", git = "https://github.com/Iron-E/clinvoice-error"}
clinvoice-finance = {branch = "release/0.4", git = "https://github.com/Iron-E/clinvoice-finance"}
clinvoice-export = {branch = "release/0.1", features = ["markdown"], git = "https://github.com/Iron-E/clinvoice-export"}
clinvoice-match = {branch = "release/0.5", features = ["serde"], git = "https://github.com/Iron-E/clinvoice-match"}
clinvoice-schema = {branch = "release/0.9", git = "https://github.com/Iron-E/clinvoice-schema"}

clap = {features=["derive"], version = "3"}
dialoguer = "0.10"
futures = "0.3"
humantime = "2"
serde = "1"
serde_yaml = "0.8"
sqlx = {features = ["runtime-tokio-rustls", "tls"], version = "0.5"}
structopt = "0.3"
strum = "0.24"
thiserror = "1"
tokio = {features = ["fs", "macros", "rt-multi-thread"], version = "1"}
toml = "0.5"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = ["postgres"]
postgres = ["clinvoice-adapter-postgres", "sqlx/postgres"]
