# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_bin"
version = "0.1.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Command line executor for CLInvoice."

edition = "2018"
license = "GPL3"
readme = "../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# CLInvoice
clinvoice_adapter_bincode = {path='../adapters/clinvoice_adapter_bincode', optional=true, version="0.2"}
clinvoice_config = {path='../clinvoice_config', version="0.1"}

[features]
default = ["bincode"]
bincode = ["clinvoice_adapter_bincode"]
