# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_config"
version = "0.3.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "User configuration of CLInvoice."

edition = "2018"
license = "GPL3"
readme = "../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# Async
async-trait = "0.1"
futures = "0.3"

# CLInvoice
clinvoice_adapter = {path="../adapters/clinvoice_adapter", features=["serde_support"], version="0.9"}
clinvoice_data = {path="../clinvoice_data", version="0.6"}
clinvoice_error = {path="../clinvoice_error", version="0.2"}

# Directories
dirs = "3"

# Errors
thiserror = "1"

# Serialization
humantime-serde = "1"
serde = {version="1", features=["derive"]}
toml = "0.5"
