# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_config"
version = "0.4.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "User configuration of CLInvoice."

edition = "2021"
license = "GPL3"
readme = "../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# CLInvoice
clinvoice_error = {path="../clinvoice_error", version="0.3"}
clinvoice_schema = {features = ["serde_support"], path="../clinvoice_schema", version="0.7"}

# Directories
dirs = "3"

# Errors
thiserror = "1"

# Serialization
humantime-serde = "1"
serde = {version="1", features=["derive"]}
toml = "0.5"
