# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_data"
version = "0.4.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Data structures for CLInvoice."

edition = "2018"
license = "GPL3"
readme = "../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# Currency
rust_decimal = "1"

# Date/Time
chrono = {version="0.4", features=["serde"]}

# Serialization
serde = {version="1", optional=true}

# Unique Identification
uuid = {version="0.8", features=["v4", "v5"]}

[features]
default = []
serde_support = ["rust_decimal/serde-str", "serde/derive", "uuid/serde"]
