# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_data"
version = "0.5.1"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Data structures for CLInvoice."

edition = "2018"
license = "GPL3"
readme = "../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# CLInvoice
clinvoice_finance = {path='../clinvoice_finance', version="0.2"}

# Date/Time
chrono = {version="0.4", features=["serde"]}

# Serialization
serde = {version="1", optional=true}

# Unique Identification
uuid = {version="0.8", features=["v4"], optional=true}

[features]
default = []
serde_support = ["clinvoice_finance/serde_support", "serde/derive"]
serde_support_unique_id = ["clinvoice_finance/serde_support", "serde/derive", "uuid", "uuid/serde"]
unique_id = ["uuid"]
