# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_error"
version = "0.1.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Common error boilerplate macros for CLInvoice."

edition = "2018"
license = "GPL3"
readme = "../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"
