# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_export"
version = "0.1.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Export CLInvoice data to different file formats."

edition = "2021"
license = "GPL3"
readme = "../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# CLInvoice
clinvoice_finance = {path='../clinvoice_finance', version="0.3"}
clinvoice_schema = {path='../clinvoice_schema', version="0.7"}

[features]
markdown = []
