# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_finance"
version = "0.2.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Structures for dealing with currencies and conversions between currencies for CLInvoice"

edition = "2018"
license = "GPL3"
readme = "../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# Currency
rust_decimal = "1"

# Date/Time
chrono = "0.4"

# Serialization
serde = {optional=true, version="1"}

# Web Scraping
reqwest = {features=["blocking"], version="0.11"}

[features]
default = []
serde_support = ["rust_decimal/serde-str", "serde/derive"]
