# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_finance"
version = "0.2.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Structures for dealing with currencies and conversions between currencies for CLInvoice"

edition = "2021"
license = "GPL3"
readme = "../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# Async
futures = "0.3"

# Archiving
zip = "0.5"

# CLInvoice
clinvoice_error = {path="../clinvoice_error", version="0.2"}

# Currency
rust_decimal = "1"

# Date/Time
chrono = "0.4"

# Errors
thiserror = "1"

# Serialization
serde = {optional=true, version="1"}

# Web Requests
reqwest = "0.11"

[dev-dependencies]
tokio = {features=["macros", "rt-multi-thread"], version="1"}

[features]
default = []
serde_support = ["rust_decimal/serde-str", "serde/derive"]
