# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_schema"
version = "0.6.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Data structures for CLInvoice."

edition = "2021"
license = "GPL3"
readme = "../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# CLInvoice
clinvoice_finance = {path='../clinvoice_finance', version="0.2"}

# Date/Time
chrono = {version="0.4", features=["serde"]}

# Errors
thiserror = "1"

# Serialization
humantime-serde = "1"
serde = {version="1", optional=true}

[features]
default = []
serde_support = ["clinvoice_finance/serde_support", "serde/derive"]
