# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_adapter"
version = "0.9.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Shared adapter definitions for CLInvoice."

edition = "2021"
license = "GPL3"
readme = "../../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# Async
async-trait = "0.1"
futures = "0.3"

# CLInvoice
clinvoice_data = {path="../../clinvoice_data", version="0.6"}
clinvoice_error = {path="../../clinvoice_error", version="0.2"}
clinvoice_query = {path="../../clinvoice_query", version="0.2"}

# Database
sqlx = "0.5"

# Errors
thiserror = "1"

# Serialization
serde = {version="1", optional=true}

[features]
default = []
serde_support = ["clinvoice_query/serde_support", "serde/derive"]
