# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_adapter"
version = "0.11.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Shared adapter definitions for CLInvoice."

edition = "2021"
license = "GPL3"
readme = "../../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# Async
async-trait = "0.1"
futures = "0.3"

# CLInvoice
clinvoice_error = {path="../../clinvoice_error", version="0.3"}
clinvoice_match = {path="../../clinvoice_match", version="0.4"}
clinvoice_schema = {path="../../clinvoice_schema", version="0.8"}

# Database
sqlx = "0.5"

# Serialization
serde = {version="1", optional=true}

[dev-dependencies]
sqlx = {features=["postgres"], version="0.5"}

[features]
default = []
serde_support = ["clinvoice_match/serde_support", "serde/derive"]
