# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_adapter_bincode"
version = "0.5.2"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Bincode filesystem adapter for CLInvoice."

edition = "2018"
license = "GPL3"
readme = "../../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# CLInvoice
clinvoice_adapter = {path="../clinvoice_adapter", version="0.7"}
clinvoice_data = {path="../../clinvoice_data", features=["serde_support"], version="0.3"}
clinvoice_error = {path="../../clinvoice_error", version="0.1"}
clinvoice_query = {path="../../clinvoice_query", features=["serde_support"], version="0.1"}

# Environment Variable Expansion
shellexpand = "2"

# Errors
thiserror = "1"

# Serialization
bincode = "1"
serde = "1"
