# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_adapter_bincode"
version = "0.7.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Bincode filesystem support for `clinvoice_adapter` 0.8"

edition = "2018"
license = "GPL3"
readme = "../../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# Async
async-trait = "0.1"
futures = "0.3"
tokio = {features=["fs"], version="1"}
tokio-stream = {features=["fs"], version="0.1"}

# CLInvoice
clinvoice_adapter = {path="../clinvoice_adapter", version="0.9"}
clinvoice_data = {path="../../clinvoice_data", features=["serde_support"], version="0.5"}
clinvoice_error = {path="../../clinvoice_error", version="0.2"}
clinvoice_query = {path="../../clinvoice_query", version="0.2"}

# Environment Variable Expansion
shellexpand = "2"

# Errors
thiserror = "1"

# Serialization
bincode = "1"
serde = "1"

[dev-dependencies]
tokio = {features=["macros", "rt-multi-thread"], version="1"}
