# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_adapter_postgres"
version = "0.1.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Postgres filesystem support for `clinvoice_adapter` 0.8"

edition = "2021"
license = "GPL3"
readme = "../../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# Async
async-trait = "0.1"
futures = "0.3"

# CLInvoice
clinvoice_adapter = {path="../clinvoice_adapter", version="0.9"}
clinvoice_error = {path="../../clinvoice_error", version="0.2"}
clinvoice_finance = {path='../../clinvoice_finance', version="0.2"}
clinvoice_match = {path="../../clinvoice_match", version="0.2"}
clinvoice_schema = {path="../../clinvoice_schema", version="0.6"}

# Database
sqlx = {features=["chrono", "decimal", "macros", "postgres", "runtime-tokio-rustls", "tls"], version="0.5"}

# Environment Variable Expansion
shellexpand = "2"

# Errors
thiserror = "1"

[dev-dependencies]
dotenv = "0.15.0"
tokio = {features=["macros", "rt-multi-thread"], version="1"}
lazy_static = "1"

[features]
default = []
# sqlx-actix = ["sqlx/runtime-actix-rustls"]
# sqlx-tokio = ["sqlx/runtime-tokio-rustls"]
