# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice_adapter_mongodb"
version = "0.1.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "mongodb adapter for CLInvoice."

edition = "2018"
license = "GPL3"
readme = "../../README.md"
repository = "https://www.github.com/Iron-E/clinvoice"

[dependencies]
# CLInvoice
clinvoice_data = {path = "../../clinvoice_data", version = "0.1"}

# Database
mongodb = {version = "1", default-features = false, features=["sync"]}
serde = {version = "1", features = ["derive"]}
